# dynamic-init-demo

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  component-with-args.c  component1.c  component2.c  component3.c  init.c  init.h  initcalls.lf  main.c
